--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,13 +1,8 @@
-.header {
-    background: #fff;
-    padding: 0;
-    border-bottom: 1px solid #98cf25;
-}
-
-.header-inner {
+.header{
     display: flex;
     align-items: center;
     padding: 0 20px;
+    height: 64px;
 }
 
 .menu {
